--- a/less/home-page.less
+++ b/less/home-page.less
@@ -5,6 +5,11 @@
 
   // -------------- HEADER SECTION--------------
   .intro {
+    margin-top: 11rem;
+    
+    @media @phone {
+    margin-top: 10rem;
+    }
 
     img {
       width: 100%;
