--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,6 +6,9 @@
     border: 1px double @nav-border;
     display: flex;
     justify-content: center; //to center the actual nav items
+    position: fixed;
+    top: 0;
+    opacity: 0.9;
 
     @media @phone {
         background-color: white;
